--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/Shuoki/shuoki-bot#readme",
   "dependencies": {
     "discord.js": "^13.3.1",
-    "dokdo": "^0.5.1"
+    "dokdo": "^0.5.1",
+    "fs": "^0.0.1-security",
+    "node-fetch": "^3.0.0"
   }
 }
